# nutri.r

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Nuevo_Documento.md  README.md  Trunk.toml  build-css.js  cargo_errors.txt  cargo_output.txt  check_results.txt  docker-compose.yml  guide.md  index.html  input.css  metadata.json  nginx.conf  package-lock.json  package.json  responsive.css  styles.css  tailwind.config.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
openspec/: config.yaml
public/brand/: README.md
src/: app.rs  main.rs  plan_display.rs  tauri_bridge.rs  theme.rs  types.rs
src-tauri/: .dockerignore  .gitignore  .taurignore  Cargo.toml  build_log_app.txt  build_log_app_2.txt  build_log_app_3.txt  build_log_core.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nutri-app/: Cargo.toml  tauri.conf.json
src-tauri/nutri-app/icons/: icon.icns
src-tauri/nutri-app/src/: lib.rs  main.rs
src-tauri/nutri-app/src/commands/: achievements.rs  calendar.rs  config.rs  email.rs  import_export.rs  ingredients.rs  metadata.rs  mod.rs  nutrition.rs  ollama.rs  pantry.rs  plans.rs  preferences.rs  shopping.rs  statistics.rs  sync.rs  tags.rs  water.rs
src-tauri/nutri-core/: Cargo.toml
src-tauri/nutri-core/src/: lib.rs  state.rs
src-tauri/nutri-core/src/models/: achievement.rs  calendar.rs  config.rs  email.rs  ingredient.rs  metadata.rs  mod.rs  plan.rs  preferences.rs  search.rs  tag.rs  water.rs
src-tauri/nutri-core/src/repositories/: metadata_repository.rs  mod.rs  pantry_repository.rs  plan_repository.rs
src-tauri/nutri-core/src/services/: ai_service.rs  calendar_service.rs  email_service.rs  import_export.rs  metadata_service.rs  mod.rs  nutrition_service.rs  pantry_service.rs  plan_email_renderer.rs  plan_service.rs  search_service.rs  statistics_service.rs  sync_service.rs  tag_service.rs
src-tauri/nutri-server/: Cargo.toml  Dockerfile
src-tauri/nutri-server/src/: error.rs  main.rs  scheduler.rs
src-tauri/nutri-server/src/handlers/: achievements.rs  calendar.rs  config.rs  email.rs  import_export.rs  ingredients.rs  mod.rs  nutrition.rs  ollama.rs  pantry.rs  plans.rs  preferences.rs  shopping.rs  statistics.rs  sync.rs  system.rs  tags.rs  water.rs
src-tauri/src/: ai.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: achievements.rs  calendar.rs  config.rs  email.rs  import_export.rs  ingredients.rs  metadata.rs  mod.rs  nutrition.rs  ollama.rs  pantry.rs  plans.rs  preferences.rs  shopping.rs  statistics.rs  sync.rs  tags.rs  water.rs
src-tauri/src/models/: backup.rs  config.rs  metadata.rs  mod.rs  nutrition.rs  ollama.rs  pantry.rs  plan.rs  shopping.rs  statistics.rs
src-tauri/src/repositories/: achievement_repository.rs  calendar_repository.rs  config_repository.rs  ingredient_repository.rs  metadata_repository.rs  pantry_repository.rs  plan_repository.rs  preferences_repository.rs  shopping_repository.rs  tag_repository.rs
src-tauri/src/services/: achievement_service.rs  ai_service.rs  calendar_service.rs  import_export.rs  ingredient_service.rs  mod.rs  shopping_service.rs
src-tauri/src/utils/: error.rs
src/api/: client.rs
src/components/: mod.rs  navbar.rs
src/components/dashboard/: meal_card.rs  mod.rs  nutrition_summary.rs  water_tracker.rs
src/components/features/: achievement_card.rs  mod.rs  pantry_item_card.rs  plan_list.rs
src/components/layout/: bottom_nav.rs  mod.rs  nav.rs
src/components/ui/: button.rs  card.rs  input.rs  loading.rs  mod.rs  modal.rs  spacer.rs  star_rating.rs  sync_status.rs  tag_badge.rs  tag_selector.rs  toast.rs
src/pages/: achievements.rs  add.rs  calendar.rs  config.rs  daily_view.rs  dashboard.rs  favorites.rs  history.rs  home.rs  ingredients.rs  mod.rs  pantry.rs  plan.rs  plan_detail.rs  recipe_detail.rs  shopping_list.rs
src/state/: app_context.rs  mod.rs
src/tauri/: client.rs
sync-server/: index.js  index.ts  package.json
