[package]
name = "nutri-r-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.11", features = ["csr"] }
leptos_router = { version = "0.8.11" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Blob", "Url", "HtmlAnchorElement", "File", "FileList", 
    "HtmlInputElement", "Document", "Element", "Window", "Node",
    "CustomEvent", "CustomEventInit"
] }
console_error_panic_hook = "0.1.7"
log = "0.4"
markdown = "1.0.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[workspace]
members = ["src-tauri"]

[profile.dev]
debug = 0
incremental = false
panic = "abort"
