[package]
name = "nutri-r-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.11", features = ["csr"] }
leptos_router = { version = "0.8.11" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "Blob", "Url", "HtmlAnchorElement", "File", "FileList",
    "HtmlInputElement", "Document", "Element", "Window", "Node",
    "CustomEvent", "CustomEventInit", "Storage", "MediaQueryList"
] }
console_error_panic_hook = "0.1.7"
log = "0.4"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
reqwest = { version = "0.13.2", features = ["json"] }
once_cell = "1.19"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[workspace]
members = [
    ".",
    "src-tauri/nutri-core",
    "src-tauri/nutri-app",
    "src-tauri/nutri-server",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 1                    # Suficiente optimización sin ralentizar la compilación
debug = false                    # Reduce tamaño de símbolos de debug (acelera mucho)
incremental = true               # Compilación incremental más eficiente
split-debuginfo = "unpacked"     # Mejora en Windows

# Optimiza solo las dependencias pesadas (leptos, axum, tauri, tokio, etc.)
[profile.dev.package."*"]
opt-level = 2

# Paquetes que suelen ser muy pesados en tu stack
[profile.dev.package.leptos]
opt-level = 2

[profile.dev.package.axum]
opt-level = 2

[profile.dev.package.tauri]
opt-level = 2

[profile.dev.package.tokio]
opt-level = 2
