[package]
name = "nutri-app"
version = "0.1.0"
edition = "2021"

[dependencies]
nutri-core = { path = "../nutri-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
