[package]
name = "nutri-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "hostname", "builder", "smtp-transport", "tokio1"], default-features = false }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
