[package]
name = "nutri-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nutri-core = { path = "../nutri-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
log = "0.4"
env_logger = "0.11"
tokio-cron-scheduler = "0.10"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
